// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot 1`] = `
<RCTSafeAreaView
  style={
    {
      "backgroundColor": "#303030",
      "height": "100%",
    }
  }
>
  <View
    style={
      {
        "alignSelf": "center",
        "width": "80%",
      }
    }
  >
    <View
      style={
        {
          "flexDirection": "row",
        }
      }
    >
      <View>
        <Text
          style={
            {
              "color": "#ffd600",
              "fontSize": 41.0958904109589,
              "fontWeight": "900",
              "textAlign": "center",
            }
          }
        >
          Temper
        </Text>
        <Text
          style={
            {
              "color": "#ffd600",
              "fontSize": 30.821917808219176,
              "textAlign": "center",
            }
          }
        >
          @pghtemper
        </Text>
        <Text
          style={
            {
              "color": "#ffd600",
              "fontSize": 41.0958904109589,
              "fontWeight": "900",
              "textAlign": "center",
            }
          }
        >
          3
        </Text>
      </View>
      <Text
        style={
          {
            "color": "#ababab",
            "flex": 1,
            "fontSize": 30.821917808219176,
            "fontWeight": "900",
            "marginTop": 20,
            "textAlign": "center",
          }
        }
      >
        Game to 15
      </Text>
      <View>
        <Text
          style={
            {
              "color": "#ffd600",
              "fontSize": 41.0958904109589,
              "fontWeight": "900",
              "textAlign": "center",
            }
          }
        >
          Sockeye
        </Text>
        <Text
          style={
            {
              "color": "#ffd600",
              "fontSize": 30.821917808219176,
              "textAlign": "center",
            }
          }
        />
        <Text
          style={
            {
              "color": "#ffd600",
              "fontSize": 41.0958904109589,
              "fontWeight": "900",
              "textAlign": "center",
            }
          }
        >
          0
        </Text>
      </View>
    </View>
    <Text
      style={
        {
          "color": "#ababab",
          "fontSize": 61.64383561643835,
          "marginBottom": 10,
          "textAlign": "center",
        }
      }
    >
      7
       players on next
      

      O 
      point
    </Text>
    <RCTScrollView
      contentContainerStyle={
        {
          "flexDirection": "row",
          "flexWrap": "wrap",
        }
      }
      data={
        [
          {
            "firstName": "First 1",
            "lastName": "Last 1",
          },
          {
            "firstName": "First 2",
            "lastName": "Last 2",
          },
          {
            "firstName": "First 3",
            "lastName": "Last 3",
          },
          {
            "firstName": "First 4",
            "lastName": "Last 4",
          },
          {
            "firstName": "First 5",
            "lastName": "Last 5",
          },
          {
            "firstName": "First 6",
            "lastName": "Last 6",
          },
          {
            "firstName": "First 7",
            "lastName": "Last 7",
          },
        ]
      }
      getItem={[Function]}
      getItemCount={[Function]}
      keyExtractor={[Function]}
      onContentSizeChange={[Function]}
      onLayout={[Function]}
      onMomentumScrollBegin={[Function]}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      removeClippedSubviews={false}
      renderItem={[Function]}
      scrollEventThrottle={50}
      stickyHeaderIndices={[]}
      viewabilityConfigCallbackPairs={[]}
    >
      <View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            collapsable={false}
            style={
              {
                "alignSelf": undefined,
                "bottom": undefined,
                "left": undefined,
                "position": undefined,
                "right": undefined,
                "shadowColor": "#000",
                "shadowOffset": {
                  "height": 0,
                  "width": 0,
                },
                "shadowOpacity": 0,
                "shadowRadius": 0,
                "top": undefined,
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "shadowColor": "#000",
                  "shadowOffset": {
                    "height": 0,
                    "width": 0,
                  },
                  "shadowOpacity": 0,
                  "shadowRadius": 0,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "backgroundColor": "#303030",
                    "borderColor": "rgba(171, 171, 171, 0.29)",
                    "borderRadius": 8,
                    "borderStyle": "solid",
                    "borderWidth": 2,
                    "flexDirection": "column",
                    "margin": 5,
                  }
                }
              >
                <View
                  accessibilityRole="button"
                  accessibilityState={
                    {
                      "disabled": false,
                      "selected": false,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    [
                      {
                        "overflow": "hidden",
                      },
                      false,
                      [
                        {
                          "borderRadius": 8,
                        },
                        {
                          "flexGrow": 1,
                        },
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      [
                        {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "flexGrow": 1,
                          "paddingLeft": 4,
                          "position": "relative",
                        },
                        {
                          "paddingLeft": 0,
                        },
                        {
                          "paddingRight": 0,
                        },
                      ]
                    }
                  >
                    <Text
                      ellipsizeMode="tail"
                      numberOfLines={1}
                      selectable={false}
                      style={
                        [
                          {
                            "color": "rgba(28, 27, 31, 1)",
                            "fontFamily": "System",
                            "fontSize": 14,
                            "fontWeight": "500",
                            "letterSpacing": 0.1,
                            "lineHeight": 20,
                          },
                          {
                            "textAlign": "left",
                          },
                          {
                            "writingDirection": "ltr",
                          },
                          [
                            {
                              "marginVertical": 6,
                              "textAlignVertical": "center",
                            },
                            {
                              "color": "#ababab",
                              "fontFamily": "System",
                              "fontSize": 14,
                              "fontWeight": "500",
                              "letterSpacing": 0.1,
                              "lineHeight": 20,
                            },
                            {
                              "marginLeft": 16,
                              "marginRight": 16,
                            },
                            undefined,
                          ],
                        ]
                      }
                    >
                      First 1
                       
                      Last 1
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            collapsable={false}
            style={
              {
                "alignSelf": undefined,
                "bottom": undefined,
                "left": undefined,
                "position": undefined,
                "right": undefined,
                "shadowColor": "#000",
                "shadowOffset": {
                  "height": 0,
                  "width": 0,
                },
                "shadowOpacity": 0,
                "shadowRadius": 0,
                "top": undefined,
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "shadowColor": "#000",
                  "shadowOffset": {
                    "height": 0,
                    "width": 0,
                  },
                  "shadowOpacity": 0,
                  "shadowRadius": 0,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "backgroundColor": "#303030",
                    "borderColor": "rgba(171, 171, 171, 0.29)",
                    "borderRadius": 8,
                    "borderStyle": "solid",
                    "borderWidth": 2,
                    "flexDirection": "column",
                    "margin": 5,
                  }
                }
              >
                <View
                  accessibilityRole="button"
                  accessibilityState={
                    {
                      "disabled": false,
                      "selected": false,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    [
                      {
                        "overflow": "hidden",
                      },
                      false,
                      [
                        {
                          "borderRadius": 8,
                        },
                        {
                          "flexGrow": 1,
                        },
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      [
                        {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "flexGrow": 1,
                          "paddingLeft": 4,
                          "position": "relative",
                        },
                        {
                          "paddingLeft": 0,
                        },
                        {
                          "paddingRight": 0,
                        },
                      ]
                    }
                  >
                    <Text
                      ellipsizeMode="tail"
                      numberOfLines={1}
                      selectable={false}
                      style={
                        [
                          {
                            "color": "rgba(28, 27, 31, 1)",
                            "fontFamily": "System",
                            "fontSize": 14,
                            "fontWeight": "500",
                            "letterSpacing": 0.1,
                            "lineHeight": 20,
                          },
                          {
                            "textAlign": "left",
                          },
                          {
                            "writingDirection": "ltr",
                          },
                          [
                            {
                              "marginVertical": 6,
                              "textAlignVertical": "center",
                            },
                            {
                              "color": "#ababab",
                              "fontFamily": "System",
                              "fontSize": 14,
                              "fontWeight": "500",
                              "letterSpacing": 0.1,
                              "lineHeight": 20,
                            },
                            {
                              "marginLeft": 16,
                              "marginRight": 16,
                            },
                            undefined,
                          ],
                        ]
                      }
                    >
                      First 2
                       
                      Last 2
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            collapsable={false}
            style={
              {
                "alignSelf": undefined,
                "bottom": undefined,
                "left": undefined,
                "position": undefined,
                "right": undefined,
                "shadowColor": "#000",
                "shadowOffset": {
                  "height": 0,
                  "width": 0,
                },
                "shadowOpacity": 0,
                "shadowRadius": 0,
                "top": undefined,
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "shadowColor": "#000",
                  "shadowOffset": {
                    "height": 0,
                    "width": 0,
                  },
                  "shadowOpacity": 0,
                  "shadowRadius": 0,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "backgroundColor": "#303030",
                    "borderColor": "rgba(171, 171, 171, 0.29)",
                    "borderRadius": 8,
                    "borderStyle": "solid",
                    "borderWidth": 2,
                    "flexDirection": "column",
                    "margin": 5,
                  }
                }
              >
                <View
                  accessibilityRole="button"
                  accessibilityState={
                    {
                      "disabled": false,
                      "selected": false,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    [
                      {
                        "overflow": "hidden",
                      },
                      false,
                      [
                        {
                          "borderRadius": 8,
                        },
                        {
                          "flexGrow": 1,
                        },
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      [
                        {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "flexGrow": 1,
                          "paddingLeft": 4,
                          "position": "relative",
                        },
                        {
                          "paddingLeft": 0,
                        },
                        {
                          "paddingRight": 0,
                        },
                      ]
                    }
                  >
                    <Text
                      ellipsizeMode="tail"
                      numberOfLines={1}
                      selectable={false}
                      style={
                        [
                          {
                            "color": "rgba(28, 27, 31, 1)",
                            "fontFamily": "System",
                            "fontSize": 14,
                            "fontWeight": "500",
                            "letterSpacing": 0.1,
                            "lineHeight": 20,
                          },
                          {
                            "textAlign": "left",
                          },
                          {
                            "writingDirection": "ltr",
                          },
                          [
                            {
                              "marginVertical": 6,
                              "textAlignVertical": "center",
                            },
                            {
                              "color": "#ababab",
                              "fontFamily": "System",
                              "fontSize": 14,
                              "fontWeight": "500",
                              "letterSpacing": 0.1,
                              "lineHeight": 20,
                            },
                            {
                              "marginLeft": 16,
                              "marginRight": 16,
                            },
                            undefined,
                          ],
                        ]
                      }
                    >
                      First 3
                       
                      Last 3
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            collapsable={false}
            style={
              {
                "alignSelf": undefined,
                "bottom": undefined,
                "left": undefined,
                "position": undefined,
                "right": undefined,
                "shadowColor": "#000",
                "shadowOffset": {
                  "height": 0,
                  "width": 0,
                },
                "shadowOpacity": 0,
                "shadowRadius": 0,
                "top": undefined,
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "shadowColor": "#000",
                  "shadowOffset": {
                    "height": 0,
                    "width": 0,
                  },
                  "shadowOpacity": 0,
                  "shadowRadius": 0,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "backgroundColor": "#303030",
                    "borderColor": "rgba(171, 171, 171, 0.29)",
                    "borderRadius": 8,
                    "borderStyle": "solid",
                    "borderWidth": 2,
                    "flexDirection": "column",
                    "margin": 5,
                  }
                }
              >
                <View
                  accessibilityRole="button"
                  accessibilityState={
                    {
                      "disabled": false,
                      "selected": false,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    [
                      {
                        "overflow": "hidden",
                      },
                      false,
                      [
                        {
                          "borderRadius": 8,
                        },
                        {
                          "flexGrow": 1,
                        },
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      [
                        {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "flexGrow": 1,
                          "paddingLeft": 4,
                          "position": "relative",
                        },
                        {
                          "paddingLeft": 0,
                        },
                        {
                          "paddingRight": 0,
                        },
                      ]
                    }
                  >
                    <Text
                      ellipsizeMode="tail"
                      numberOfLines={1}
                      selectable={false}
                      style={
                        [
                          {
                            "color": "rgba(28, 27, 31, 1)",
                            "fontFamily": "System",
                            "fontSize": 14,
                            "fontWeight": "500",
                            "letterSpacing": 0.1,
                            "lineHeight": 20,
                          },
                          {
                            "textAlign": "left",
                          },
                          {
                            "writingDirection": "ltr",
                          },
                          [
                            {
                              "marginVertical": 6,
                              "textAlignVertical": "center",
                            },
                            {
                              "color": "#ababab",
                              "fontFamily": "System",
                              "fontSize": 14,
                              "fontWeight": "500",
                              "letterSpacing": 0.1,
                              "lineHeight": 20,
                            },
                            {
                              "marginLeft": 16,
                              "marginRight": 16,
                            },
                            undefined,
                          ],
                        ]
                      }
                    >
                      First 4
                       
                      Last 4
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            collapsable={false}
            style={
              {
                "alignSelf": undefined,
                "bottom": undefined,
                "left": undefined,
                "position": undefined,
                "right": undefined,
                "shadowColor": "#000",
                "shadowOffset": {
                  "height": 0,
                  "width": 0,
                },
                "shadowOpacity": 0,
                "shadowRadius": 0,
                "top": undefined,
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "shadowColor": "#000",
                  "shadowOffset": {
                    "height": 0,
                    "width": 0,
                  },
                  "shadowOpacity": 0,
                  "shadowRadius": 0,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "backgroundColor": "#303030",
                    "borderColor": "rgba(171, 171, 171, 0.29)",
                    "borderRadius": 8,
                    "borderStyle": "solid",
                    "borderWidth": 2,
                    "flexDirection": "column",
                    "margin": 5,
                  }
                }
              >
                <View
                  accessibilityRole="button"
                  accessibilityState={
                    {
                      "disabled": false,
                      "selected": false,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    [
                      {
                        "overflow": "hidden",
                      },
                      false,
                      [
                        {
                          "borderRadius": 8,
                        },
                        {
                          "flexGrow": 1,
                        },
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      [
                        {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "flexGrow": 1,
                          "paddingLeft": 4,
                          "position": "relative",
                        },
                        {
                          "paddingLeft": 0,
                        },
                        {
                          "paddingRight": 0,
                        },
                      ]
                    }
                  >
                    <Text
                      ellipsizeMode="tail"
                      numberOfLines={1}
                      selectable={false}
                      style={
                        [
                          {
                            "color": "rgba(28, 27, 31, 1)",
                            "fontFamily": "System",
                            "fontSize": 14,
                            "fontWeight": "500",
                            "letterSpacing": 0.1,
                            "lineHeight": 20,
                          },
                          {
                            "textAlign": "left",
                          },
                          {
                            "writingDirection": "ltr",
                          },
                          [
                            {
                              "marginVertical": 6,
                              "textAlignVertical": "center",
                            },
                            {
                              "color": "#ababab",
                              "fontFamily": "System",
                              "fontSize": 14,
                              "fontWeight": "500",
                              "letterSpacing": 0.1,
                              "lineHeight": 20,
                            },
                            {
                              "marginLeft": 16,
                              "marginRight": 16,
                            },
                            undefined,
                          ],
                        ]
                      }
                    >
                      First 5
                       
                      Last 5
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            collapsable={false}
            style={
              {
                "alignSelf": undefined,
                "bottom": undefined,
                "left": undefined,
                "position": undefined,
                "right": undefined,
                "shadowColor": "#000",
                "shadowOffset": {
                  "height": 0,
                  "width": 0,
                },
                "shadowOpacity": 0,
                "shadowRadius": 0,
                "top": undefined,
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "shadowColor": "#000",
                  "shadowOffset": {
                    "height": 0,
                    "width": 0,
                  },
                  "shadowOpacity": 0,
                  "shadowRadius": 0,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "backgroundColor": "#303030",
                    "borderColor": "rgba(171, 171, 171, 0.29)",
                    "borderRadius": 8,
                    "borderStyle": "solid",
                    "borderWidth": 2,
                    "flexDirection": "column",
                    "margin": 5,
                  }
                }
              >
                <View
                  accessibilityRole="button"
                  accessibilityState={
                    {
                      "disabled": false,
                      "selected": false,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    [
                      {
                        "overflow": "hidden",
                      },
                      false,
                      [
                        {
                          "borderRadius": 8,
                        },
                        {
                          "flexGrow": 1,
                        },
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      [
                        {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "flexGrow": 1,
                          "paddingLeft": 4,
                          "position": "relative",
                        },
                        {
                          "paddingLeft": 0,
                        },
                        {
                          "paddingRight": 0,
                        },
                      ]
                    }
                  >
                    <Text
                      ellipsizeMode="tail"
                      numberOfLines={1}
                      selectable={false}
                      style={
                        [
                          {
                            "color": "rgba(28, 27, 31, 1)",
                            "fontFamily": "System",
                            "fontSize": 14,
                            "fontWeight": "500",
                            "letterSpacing": 0.1,
                            "lineHeight": 20,
                          },
                          {
                            "textAlign": "left",
                          },
                          {
                            "writingDirection": "ltr",
                          },
                          [
                            {
                              "marginVertical": 6,
                              "textAlignVertical": "center",
                            },
                            {
                              "color": "#ababab",
                              "fontFamily": "System",
                              "fontSize": 14,
                              "fontWeight": "500",
                              "letterSpacing": 0.1,
                              "lineHeight": 20,
                            },
                            {
                              "marginLeft": 16,
                              "marginRight": 16,
                            },
                            undefined,
                          ],
                        ]
                      }
                    >
                      First 6
                       
                      Last 6
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            collapsable={false}
            style={
              {
                "alignSelf": undefined,
                "bottom": undefined,
                "left": undefined,
                "position": undefined,
                "right": undefined,
                "shadowColor": "#000",
                "shadowOffset": {
                  "height": 0,
                  "width": 0,
                },
                "shadowOpacity": 0,
                "shadowRadius": 0,
                "top": undefined,
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "shadowColor": "#000",
                  "shadowOffset": {
                    "height": 0,
                    "width": 0,
                  },
                  "shadowOpacity": 0,
                  "shadowRadius": 0,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "backgroundColor": "#303030",
                    "borderColor": "rgba(171, 171, 171, 0.29)",
                    "borderRadius": 8,
                    "borderStyle": "solid",
                    "borderWidth": 2,
                    "flexDirection": "column",
                    "margin": 5,
                  }
                }
              >
                <View
                  accessibilityRole="button"
                  accessibilityState={
                    {
                      "disabled": false,
                      "selected": false,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    [
                      {
                        "overflow": "hidden",
                      },
                      false,
                      [
                        {
                          "borderRadius": 8,
                        },
                        {
                          "flexGrow": 1,
                        },
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      [
                        {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "flexGrow": 1,
                          "paddingLeft": 4,
                          "position": "relative",
                        },
                        {
                          "paddingLeft": 0,
                        },
                        {
                          "paddingRight": 0,
                        },
                      ]
                    }
                  >
                    <Text
                      ellipsizeMode="tail"
                      numberOfLines={1}
                      selectable={false}
                      style={
                        [
                          {
                            "color": "rgba(28, 27, 31, 1)",
                            "fontFamily": "System",
                            "fontSize": 14,
                            "fontWeight": "500",
                            "letterSpacing": 0.1,
                            "lineHeight": 20,
                          },
                          {
                            "textAlign": "left",
                          },
                          {
                            "writingDirection": "ltr",
                          },
                          [
                            {
                              "marginVertical": 6,
                              "textAlignVertical": "center",
                            },
                            {
                              "color": "#ababab",
                              "fontFamily": "System",
                              "fontSize": 14,
                              "fontWeight": "500",
                              "letterSpacing": 0.1,
                              "lineHeight": 20,
                            },
                            {
                              "marginLeft": 16,
                              "marginRight": 16,
                            },
                            undefined,
                          ],
                        ]
                      }
                    >
                      First 7
                       
                      Last 7
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
    <View
      collapsable={false}
      style={
        {
          "alignSelf": undefined,
          "bottom": undefined,
          "left": undefined,
          "position": undefined,
          "right": undefined,
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
          "shadowRadius": 0,
          "top": undefined,
        }
      }
    >
      <View
        collapsable={false}
        style={
          {
            "shadowColor": "#000",
            "shadowOffset": {
              "height": 0,
              "width": 0,
            },
            "shadowOpacity": 0,
            "shadowRadius": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "transparent",
              "borderColor": "#ffd600",
              "borderRadius": 20,
              "borderStyle": "solid",
              "borderWidth": 1,
              "marginTop": 10,
              "minWidth": 64,
            }
          }
        >
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "disabled": false,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "overflow": "hidden",
                },
                false,
                {
                  "borderRadius": 20,
                },
              ]
            }
            testID="button"
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                  },
                  undefined,
                ]
              }
            >
              <Text
                numberOfLines={1}
                selectable={false}
                style={
                  [
                    {
                      "color": "rgba(28, 27, 31, 1)",
                      "fontFamily": "System",
                      "fontSize": 14,
                      "fontWeight": "500",
                      "letterSpacing": 0.1,
                      "lineHeight": 20,
                    },
                    {
                      "textAlign": "left",
                    },
                    {
                      "writingDirection": "ltr",
                    },
                    [
                      {
                        "marginHorizontal": 16,
                        "marginVertical": 9,
                        "textAlign": "center",
                      },
                      false,
                      {
                        "marginHorizontal": 24,
                        "marginVertical": 10,
                      },
                      undefined,
                      {
                        "textTransform": "uppercase",
                      },
                      {
                        "color": "#ffd600",
                        "fontFamily": "System",
                        "fontSize": 14,
                        "fontWeight": "500",
                        "letterSpacing": 0.1,
                        "lineHeight": 20,
                      },
                      undefined,
                    ],
                  ]
                }
              >
                add guest
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      collapsable={false}
      style={
        {
          "alignSelf": undefined,
          "bottom": undefined,
          "left": undefined,
          "position": undefined,
          "right": undefined,
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
          "shadowRadius": 0,
          "top": undefined,
        }
      }
    >
      <View
        collapsable={false}
        style={
          {
            "shadowColor": "#000",
            "shadowOffset": {
              "height": 0,
              "width": 0,
            },
            "shadowOpacity": 0,
            "shadowRadius": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "#ababab",
              "borderColor": "transparent",
              "borderRadius": 20,
              "borderStyle": "solid",
              "borderWidth": 0,
              "marginTop": 10,
              "minWidth": "auto",
            }
          }
        >
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "disabled": true,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "overflow": "hidden",
                },
                false,
                {
                  "borderRadius": 20,
                },
              ]
            }
            testID="button"
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                  },
                  undefined,
                ]
              }
            >
              <Text
                numberOfLines={1}
                selectable={false}
                style={
                  [
                    {
                      "color": "rgba(28, 27, 31, 1)",
                      "fontFamily": "System",
                      "fontSize": 14,
                      "fontWeight": "500",
                      "letterSpacing": 0.1,
                      "lineHeight": 20,
                    },
                    {
                      "textAlign": "left",
                    },
                    {
                      "writingDirection": "ltr",
                    },
                    [
                      {
                        "marginHorizontal": 16,
                        "marginVertical": 9,
                        "textAlign": "center",
                      },
                      false,
                      {
                        "marginHorizontal": 24,
                        "marginVertical": 10,
                      },
                      {
                        "marginHorizontal": 8,
                      },
                      {
                        "textTransform": "uppercase",
                      },
                      {
                        "color": "rgba(28, 27, 31, 0.38)",
                        "fontFamily": "System",
                        "fontSize": 14,
                        "fontWeight": "500",
                        "letterSpacing": 0.1,
                        "lineHeight": 20,
                      },
                      undefined,
                    ],
                  ]
                }
              >
                start
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <Modal
      animationType="slide"
      hardwareAccelerated={false}
      onRequestClose={[Function]}
      testID="base-modal"
      transparent={true}
      visible={false}
    />
  </View>
</RCTSafeAreaView>
`;

exports[`should match snapshot for team two 1`] = `
<RCTSafeAreaView
  style={
    {
      "backgroundColor": "#303030",
      "height": "100%",
    }
  }
>
  <View
    style={
      {
        "alignSelf": "center",
        "width": "80%",
      }
    }
  >
    <View
      style={
        {
          "flexDirection": "row",
        }
      }
    >
      <View>
        <Text
          style={
            {
              "color": "#ffd600",
              "fontSize": 41.0958904109589,
              "fontWeight": "900",
              "textAlign": "center",
            }
          }
        >
          Temper
        </Text>
        <Text
          style={
            {
              "color": "#ffd600",
              "fontSize": 30.821917808219176,
              "textAlign": "center",
            }
          }
        >
          @pghtemper
        </Text>
        <Text
          style={
            {
              "color": "#ffd600",
              "fontSize": 41.0958904109589,
              "fontWeight": "900",
              "textAlign": "center",
            }
          }
        >
          3
        </Text>
      </View>
      <Text
        style={
          {
            "color": "#ababab",
            "flex": 1,
            "fontSize": 30.821917808219176,
            "fontWeight": "900",
            "marginTop": 20,
            "textAlign": "center",
          }
        }
      >
        Game to 15
      </Text>
      <View>
        <Text
          style={
            {
              "color": "#ffd600",
              "fontSize": 41.0958904109589,
              "fontWeight": "900",
              "textAlign": "center",
            }
          }
        >
          Sockeye
        </Text>
        <Text
          style={
            {
              "color": "#ffd600",
              "fontSize": 30.821917808219176,
              "textAlign": "center",
            }
          }
        />
        <Text
          style={
            {
              "color": "#ffd600",
              "fontSize": 41.0958904109589,
              "fontWeight": "900",
              "textAlign": "center",
            }
          }
        >
          0
        </Text>
      </View>
    </View>
    <Text
      style={
        {
          "color": "#ababab",
          "fontSize": 61.64383561643835,
          "marginBottom": 10,
          "textAlign": "center",
        }
      }
    >
      7
       players on next
      

      O 
      point
    </Text>
    <RCTScrollView
      contentContainerStyle={
        {
          "flexDirection": "row",
          "flexWrap": "wrap",
        }
      }
      data={
        [
          {
            "firstName": "First 8",
            "lastName": "Last 8",
          },
          {
            "firstName": "First 9",
            "lastName": "Last 9",
          },
          {
            "firstName": "First 10",
            "lastName": "Last 10",
          },
          {
            "firstName": "First 11",
            "lastName": "Last 11",
          },
          {
            "firstName": "First 12",
            "lastName": "Last 12",
          },
          {
            "firstName": "First 13",
            "lastName": "Last 13",
          },
          {
            "firstName": "First 14",
            "lastName": "Last 14",
          },
        ]
      }
      getItem={[Function]}
      getItemCount={[Function]}
      keyExtractor={[Function]}
      onContentSizeChange={[Function]}
      onLayout={[Function]}
      onMomentumScrollBegin={[Function]}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      removeClippedSubviews={false}
      renderItem={[Function]}
      scrollEventThrottle={50}
      stickyHeaderIndices={[]}
      viewabilityConfigCallbackPairs={[]}
    >
      <View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            collapsable={false}
            style={
              {
                "alignSelf": undefined,
                "bottom": undefined,
                "left": undefined,
                "position": undefined,
                "right": undefined,
                "shadowColor": "#000",
                "shadowOffset": {
                  "height": 0,
                  "width": 0,
                },
                "shadowOpacity": 0,
                "shadowRadius": 0,
                "top": undefined,
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "shadowColor": "#000",
                  "shadowOffset": {
                    "height": 0,
                    "width": 0,
                  },
                  "shadowOpacity": 0,
                  "shadowRadius": 0,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "backgroundColor": "#303030",
                    "borderColor": "rgba(171, 171, 171, 0.29)",
                    "borderRadius": 8,
                    "borderStyle": "solid",
                    "borderWidth": 2,
                    "flexDirection": "column",
                    "margin": 5,
                  }
                }
              >
                <View
                  accessibilityRole="button"
                  accessibilityState={
                    {
                      "disabled": false,
                      "selected": false,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    [
                      {
                        "overflow": "hidden",
                      },
                      false,
                      [
                        {
                          "borderRadius": 8,
                        },
                        {
                          "flexGrow": 1,
                        },
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      [
                        {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "flexGrow": 1,
                          "paddingLeft": 4,
                          "position": "relative",
                        },
                        {
                          "paddingLeft": 0,
                        },
                        {
                          "paddingRight": 0,
                        },
                      ]
                    }
                  >
                    <Text
                      ellipsizeMode="tail"
                      numberOfLines={1}
                      selectable={false}
                      style={
                        [
                          {
                            "color": "rgba(28, 27, 31, 1)",
                            "fontFamily": "System",
                            "fontSize": 14,
                            "fontWeight": "500",
                            "letterSpacing": 0.1,
                            "lineHeight": 20,
                          },
                          {
                            "textAlign": "left",
                          },
                          {
                            "writingDirection": "ltr",
                          },
                          [
                            {
                              "marginVertical": 6,
                              "textAlignVertical": "center",
                            },
                            {
                              "color": "#ababab",
                              "fontFamily": "System",
                              "fontSize": 14,
                              "fontWeight": "500",
                              "letterSpacing": 0.1,
                              "lineHeight": 20,
                            },
                            {
                              "marginLeft": 16,
                              "marginRight": 16,
                            },
                            undefined,
                          ],
                        ]
                      }
                    >
                      First 8
                       
                      Last 8
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            collapsable={false}
            style={
              {
                "alignSelf": undefined,
                "bottom": undefined,
                "left": undefined,
                "position": undefined,
                "right": undefined,
                "shadowColor": "#000",
                "shadowOffset": {
                  "height": 0,
                  "width": 0,
                },
                "shadowOpacity": 0,
                "shadowRadius": 0,
                "top": undefined,
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "shadowColor": "#000",
                  "shadowOffset": {
                    "height": 0,
                    "width": 0,
                  },
                  "shadowOpacity": 0,
                  "shadowRadius": 0,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "backgroundColor": "#303030",
                    "borderColor": "rgba(171, 171, 171, 0.29)",
                    "borderRadius": 8,
                    "borderStyle": "solid",
                    "borderWidth": 2,
                    "flexDirection": "column",
                    "margin": 5,
                  }
                }
              >
                <View
                  accessibilityRole="button"
                  accessibilityState={
                    {
                      "disabled": false,
                      "selected": false,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    [
                      {
                        "overflow": "hidden",
                      },
                      false,
                      [
                        {
                          "borderRadius": 8,
                        },
                        {
                          "flexGrow": 1,
                        },
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      [
                        {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "flexGrow": 1,
                          "paddingLeft": 4,
                          "position": "relative",
                        },
                        {
                          "paddingLeft": 0,
                        },
                        {
                          "paddingRight": 0,
                        },
                      ]
                    }
                  >
                    <Text
                      ellipsizeMode="tail"
                      numberOfLines={1}
                      selectable={false}
                      style={
                        [
                          {
                            "color": "rgba(28, 27, 31, 1)",
                            "fontFamily": "System",
                            "fontSize": 14,
                            "fontWeight": "500",
                            "letterSpacing": 0.1,
                            "lineHeight": 20,
                          },
                          {
                            "textAlign": "left",
                          },
                          {
                            "writingDirection": "ltr",
                          },
                          [
                            {
                              "marginVertical": 6,
                              "textAlignVertical": "center",
                            },
                            {
                              "color": "#ababab",
                              "fontFamily": "System",
                              "fontSize": 14,
                              "fontWeight": "500",
                              "letterSpacing": 0.1,
                              "lineHeight": 20,
                            },
                            {
                              "marginLeft": 16,
                              "marginRight": 16,
                            },
                            undefined,
                          ],
                        ]
                      }
                    >
                      First 9
                       
                      Last 9
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            collapsable={false}
            style={
              {
                "alignSelf": undefined,
                "bottom": undefined,
                "left": undefined,
                "position": undefined,
                "right": undefined,
                "shadowColor": "#000",
                "shadowOffset": {
                  "height": 0,
                  "width": 0,
                },
                "shadowOpacity": 0,
                "shadowRadius": 0,
                "top": undefined,
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "shadowColor": "#000",
                  "shadowOffset": {
                    "height": 0,
                    "width": 0,
                  },
                  "shadowOpacity": 0,
                  "shadowRadius": 0,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "backgroundColor": "#303030",
                    "borderColor": "rgba(171, 171, 171, 0.29)",
                    "borderRadius": 8,
                    "borderStyle": "solid",
                    "borderWidth": 2,
                    "flexDirection": "column",
                    "margin": 5,
                  }
                }
              >
                <View
                  accessibilityRole="button"
                  accessibilityState={
                    {
                      "disabled": false,
                      "selected": false,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    [
                      {
                        "overflow": "hidden",
                      },
                      false,
                      [
                        {
                          "borderRadius": 8,
                        },
                        {
                          "flexGrow": 1,
                        },
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      [
                        {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "flexGrow": 1,
                          "paddingLeft": 4,
                          "position": "relative",
                        },
                        {
                          "paddingLeft": 0,
                        },
                        {
                          "paddingRight": 0,
                        },
                      ]
                    }
                  >
                    <Text
                      ellipsizeMode="tail"
                      numberOfLines={1}
                      selectable={false}
                      style={
                        [
                          {
                            "color": "rgba(28, 27, 31, 1)",
                            "fontFamily": "System",
                            "fontSize": 14,
                            "fontWeight": "500",
                            "letterSpacing": 0.1,
                            "lineHeight": 20,
                          },
                          {
                            "textAlign": "left",
                          },
                          {
                            "writingDirection": "ltr",
                          },
                          [
                            {
                              "marginVertical": 6,
                              "textAlignVertical": "center",
                            },
                            {
                              "color": "#ababab",
                              "fontFamily": "System",
                              "fontSize": 14,
                              "fontWeight": "500",
                              "letterSpacing": 0.1,
                              "lineHeight": 20,
                            },
                            {
                              "marginLeft": 16,
                              "marginRight": 16,
                            },
                            undefined,
                          ],
                        ]
                      }
                    >
                      First 10
                       
                      Last 10
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            collapsable={false}
            style={
              {
                "alignSelf": undefined,
                "bottom": undefined,
                "left": undefined,
                "position": undefined,
                "right": undefined,
                "shadowColor": "#000",
                "shadowOffset": {
                  "height": 0,
                  "width": 0,
                },
                "shadowOpacity": 0,
                "shadowRadius": 0,
                "top": undefined,
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "shadowColor": "#000",
                  "shadowOffset": {
                    "height": 0,
                    "width": 0,
                  },
                  "shadowOpacity": 0,
                  "shadowRadius": 0,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "backgroundColor": "#303030",
                    "borderColor": "rgba(171, 171, 171, 0.29)",
                    "borderRadius": 8,
                    "borderStyle": "solid",
                    "borderWidth": 2,
                    "flexDirection": "column",
                    "margin": 5,
                  }
                }
              >
                <View
                  accessibilityRole="button"
                  accessibilityState={
                    {
                      "disabled": false,
                      "selected": false,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    [
                      {
                        "overflow": "hidden",
                      },
                      false,
                      [
                        {
                          "borderRadius": 8,
                        },
                        {
                          "flexGrow": 1,
                        },
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      [
                        {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "flexGrow": 1,
                          "paddingLeft": 4,
                          "position": "relative",
                        },
                        {
                          "paddingLeft": 0,
                        },
                        {
                          "paddingRight": 0,
                        },
                      ]
                    }
                  >
                    <Text
                      ellipsizeMode="tail"
                      numberOfLines={1}
                      selectable={false}
                      style={
                        [
                          {
                            "color": "rgba(28, 27, 31, 1)",
                            "fontFamily": "System",
                            "fontSize": 14,
                            "fontWeight": "500",
                            "letterSpacing": 0.1,
                            "lineHeight": 20,
                          },
                          {
                            "textAlign": "left",
                          },
                          {
                            "writingDirection": "ltr",
                          },
                          [
                            {
                              "marginVertical": 6,
                              "textAlignVertical": "center",
                            },
                            {
                              "color": "#ababab",
                              "fontFamily": "System",
                              "fontSize": 14,
                              "fontWeight": "500",
                              "letterSpacing": 0.1,
                              "lineHeight": 20,
                            },
                            {
                              "marginLeft": 16,
                              "marginRight": 16,
                            },
                            undefined,
                          ],
                        ]
                      }
                    >
                      First 11
                       
                      Last 11
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            collapsable={false}
            style={
              {
                "alignSelf": undefined,
                "bottom": undefined,
                "left": undefined,
                "position": undefined,
                "right": undefined,
                "shadowColor": "#000",
                "shadowOffset": {
                  "height": 0,
                  "width": 0,
                },
                "shadowOpacity": 0,
                "shadowRadius": 0,
                "top": undefined,
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "shadowColor": "#000",
                  "shadowOffset": {
                    "height": 0,
                    "width": 0,
                  },
                  "shadowOpacity": 0,
                  "shadowRadius": 0,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "backgroundColor": "#303030",
                    "borderColor": "rgba(171, 171, 171, 0.29)",
                    "borderRadius": 8,
                    "borderStyle": "solid",
                    "borderWidth": 2,
                    "flexDirection": "column",
                    "margin": 5,
                  }
                }
              >
                <View
                  accessibilityRole="button"
                  accessibilityState={
                    {
                      "disabled": false,
                      "selected": false,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    [
                      {
                        "overflow": "hidden",
                      },
                      false,
                      [
                        {
                          "borderRadius": 8,
                        },
                        {
                          "flexGrow": 1,
                        },
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      [
                        {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "flexGrow": 1,
                          "paddingLeft": 4,
                          "position": "relative",
                        },
                        {
                          "paddingLeft": 0,
                        },
                        {
                          "paddingRight": 0,
                        },
                      ]
                    }
                  >
                    <Text
                      ellipsizeMode="tail"
                      numberOfLines={1}
                      selectable={false}
                      style={
                        [
                          {
                            "color": "rgba(28, 27, 31, 1)",
                            "fontFamily": "System",
                            "fontSize": 14,
                            "fontWeight": "500",
                            "letterSpacing": 0.1,
                            "lineHeight": 20,
                          },
                          {
                            "textAlign": "left",
                          },
                          {
                            "writingDirection": "ltr",
                          },
                          [
                            {
                              "marginVertical": 6,
                              "textAlignVertical": "center",
                            },
                            {
                              "color": "#ababab",
                              "fontFamily": "System",
                              "fontSize": 14,
                              "fontWeight": "500",
                              "letterSpacing": 0.1,
                              "lineHeight": 20,
                            },
                            {
                              "marginLeft": 16,
                              "marginRight": 16,
                            },
                            undefined,
                          ],
                        ]
                      }
                    >
                      First 12
                       
                      Last 12
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            collapsable={false}
            style={
              {
                "alignSelf": undefined,
                "bottom": undefined,
                "left": undefined,
                "position": undefined,
                "right": undefined,
                "shadowColor": "#000",
                "shadowOffset": {
                  "height": 0,
                  "width": 0,
                },
                "shadowOpacity": 0,
                "shadowRadius": 0,
                "top": undefined,
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "shadowColor": "#000",
                  "shadowOffset": {
                    "height": 0,
                    "width": 0,
                  },
                  "shadowOpacity": 0,
                  "shadowRadius": 0,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "backgroundColor": "#303030",
                    "borderColor": "rgba(171, 171, 171, 0.29)",
                    "borderRadius": 8,
                    "borderStyle": "solid",
                    "borderWidth": 2,
                    "flexDirection": "column",
                    "margin": 5,
                  }
                }
              >
                <View
                  accessibilityRole="button"
                  accessibilityState={
                    {
                      "disabled": false,
                      "selected": false,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    [
                      {
                        "overflow": "hidden",
                      },
                      false,
                      [
                        {
                          "borderRadius": 8,
                        },
                        {
                          "flexGrow": 1,
                        },
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      [
                        {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "flexGrow": 1,
                          "paddingLeft": 4,
                          "position": "relative",
                        },
                        {
                          "paddingLeft": 0,
                        },
                        {
                          "paddingRight": 0,
                        },
                      ]
                    }
                  >
                    <Text
                      ellipsizeMode="tail"
                      numberOfLines={1}
                      selectable={false}
                      style={
                        [
                          {
                            "color": "rgba(28, 27, 31, 1)",
                            "fontFamily": "System",
                            "fontSize": 14,
                            "fontWeight": "500",
                            "letterSpacing": 0.1,
                            "lineHeight": 20,
                          },
                          {
                            "textAlign": "left",
                          },
                          {
                            "writingDirection": "ltr",
                          },
                          [
                            {
                              "marginVertical": 6,
                              "textAlignVertical": "center",
                            },
                            {
                              "color": "#ababab",
                              "fontFamily": "System",
                              "fontSize": 14,
                              "fontWeight": "500",
                              "letterSpacing": 0.1,
                              "lineHeight": 20,
                            },
                            {
                              "marginLeft": 16,
                              "marginRight": 16,
                            },
                            undefined,
                          ],
                        ]
                      }
                    >
                      First 13
                       
                      Last 13
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            collapsable={false}
            style={
              {
                "alignSelf": undefined,
                "bottom": undefined,
                "left": undefined,
                "position": undefined,
                "right": undefined,
                "shadowColor": "#000",
                "shadowOffset": {
                  "height": 0,
                  "width": 0,
                },
                "shadowOpacity": 0,
                "shadowRadius": 0,
                "top": undefined,
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "shadowColor": "#000",
                  "shadowOffset": {
                    "height": 0,
                    "width": 0,
                  },
                  "shadowOpacity": 0,
                  "shadowRadius": 0,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "backgroundColor": "#303030",
                    "borderColor": "rgba(171, 171, 171, 0.29)",
                    "borderRadius": 8,
                    "borderStyle": "solid",
                    "borderWidth": 2,
                    "flexDirection": "column",
                    "margin": 5,
                  }
                }
              >
                <View
                  accessibilityRole="button"
                  accessibilityState={
                    {
                      "disabled": false,
                      "selected": false,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    [
                      {
                        "overflow": "hidden",
                      },
                      false,
                      [
                        {
                          "borderRadius": 8,
                        },
                        {
                          "flexGrow": 1,
                        },
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      [
                        {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "flexGrow": 1,
                          "paddingLeft": 4,
                          "position": "relative",
                        },
                        {
                          "paddingLeft": 0,
                        },
                        {
                          "paddingRight": 0,
                        },
                      ]
                    }
                  >
                    <Text
                      ellipsizeMode="tail"
                      numberOfLines={1}
                      selectable={false}
                      style={
                        [
                          {
                            "color": "rgba(28, 27, 31, 1)",
                            "fontFamily": "System",
                            "fontSize": 14,
                            "fontWeight": "500",
                            "letterSpacing": 0.1,
                            "lineHeight": 20,
                          },
                          {
                            "textAlign": "left",
                          },
                          {
                            "writingDirection": "ltr",
                          },
                          [
                            {
                              "marginVertical": 6,
                              "textAlignVertical": "center",
                            },
                            {
                              "color": "#ababab",
                              "fontFamily": "System",
                              "fontSize": 14,
                              "fontWeight": "500",
                              "letterSpacing": 0.1,
                              "lineHeight": 20,
                            },
                            {
                              "marginLeft": 16,
                              "marginRight": 16,
                            },
                            undefined,
                          ],
                        ]
                      }
                    >
                      First 14
                       
                      Last 14
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
    <View
      collapsable={false}
      style={
        {
          "alignSelf": undefined,
          "bottom": undefined,
          "left": undefined,
          "position": undefined,
          "right": undefined,
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
          "shadowRadius": 0,
          "top": undefined,
        }
      }
    >
      <View
        collapsable={false}
        style={
          {
            "shadowColor": "#000",
            "shadowOffset": {
              "height": 0,
              "width": 0,
            },
            "shadowOpacity": 0,
            "shadowRadius": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "transparent",
              "borderColor": "#ffd600",
              "borderRadius": 20,
              "borderStyle": "solid",
              "borderWidth": 1,
              "marginTop": 10,
              "minWidth": 64,
            }
          }
        >
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "disabled": false,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "overflow": "hidden",
                },
                false,
                {
                  "borderRadius": 20,
                },
              ]
            }
            testID="button"
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                  },
                  undefined,
                ]
              }
            >
              <Text
                numberOfLines={1}
                selectable={false}
                style={
                  [
                    {
                      "color": "rgba(28, 27, 31, 1)",
                      "fontFamily": "System",
                      "fontSize": 14,
                      "fontWeight": "500",
                      "letterSpacing": 0.1,
                      "lineHeight": 20,
                    },
                    {
                      "textAlign": "left",
                    },
                    {
                      "writingDirection": "ltr",
                    },
                    [
                      {
                        "marginHorizontal": 16,
                        "marginVertical": 9,
                        "textAlign": "center",
                      },
                      false,
                      {
                        "marginHorizontal": 24,
                        "marginVertical": 10,
                      },
                      undefined,
                      {
                        "textTransform": "uppercase",
                      },
                      {
                        "color": "#ffd600",
                        "fontFamily": "System",
                        "fontSize": 14,
                        "fontWeight": "500",
                        "letterSpacing": 0.1,
                        "lineHeight": 20,
                      },
                      undefined,
                    ],
                  ]
                }
              >
                add guest
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      collapsable={false}
      style={
        {
          "alignSelf": undefined,
          "bottom": undefined,
          "left": undefined,
          "position": undefined,
          "right": undefined,
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
          "shadowRadius": 0,
          "top": undefined,
        }
      }
    >
      <View
        collapsable={false}
        style={
          {
            "shadowColor": "#000",
            "shadowOffset": {
              "height": 0,
              "width": 0,
            },
            "shadowOpacity": 0,
            "shadowRadius": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "#ababab",
              "borderColor": "transparent",
              "borderRadius": 20,
              "borderStyle": "solid",
              "borderWidth": 0,
              "marginTop": 10,
              "minWidth": "auto",
            }
          }
        >
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "disabled": true,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "overflow": "hidden",
                },
                false,
                {
                  "borderRadius": 20,
                },
              ]
            }
            testID="button"
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                  },
                  undefined,
                ]
              }
            >
              <Text
                numberOfLines={1}
                selectable={false}
                style={
                  [
                    {
                      "color": "rgba(28, 27, 31, 1)",
                      "fontFamily": "System",
                      "fontSize": 14,
                      "fontWeight": "500",
                      "letterSpacing": 0.1,
                      "lineHeight": 20,
                    },
                    {
                      "textAlign": "left",
                    },
                    {
                      "writingDirection": "ltr",
                    },
                    [
                      {
                        "marginHorizontal": 16,
                        "marginVertical": 9,
                        "textAlign": "center",
                      },
                      false,
                      {
                        "marginHorizontal": 24,
                        "marginVertical": 10,
                      },
                      {
                        "marginHorizontal": 8,
                      },
                      {
                        "textTransform": "uppercase",
                      },
                      {
                        "color": "rgba(28, 27, 31, 0.38)",
                        "fontFamily": "System",
                        "fontSize": 14,
                        "fontWeight": "500",
                        "letterSpacing": 0.1,
                        "lineHeight": 20,
                      },
                      undefined,
                    ],
                  ]
                }
              >
                start
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <Modal
      animationType="slide"
      hardwareAccelerated={false}
      onRequestClose={[Function]}
      testID="base-modal"
      transparent={true}
      visible={false}
    />
  </View>
</RCTSafeAreaView>
`;
